--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,8 @@ django = "*"
 django-crispy-forms = "*"
 djangorestframework = "*"
 django-rest-auth = "*"
-django-allauth = "*"
 dj-rest-auth = "==2.1.7"
-djangorestframework-simplejwt = "*"
+pyjwt = "*"
 
 [dev-packages]
 
